--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,28 +1,15 @@
 
-<section>
+<section class="bg-image bg-header tall-100">
   <header class="grid-middle">
     <div class="col-3">
       <div>
-        <a href="/" class="logo"> <img data-src="/images/logos/river-schriftzug.png" class="header-logo lazy"> </a>
+        <a href="/" class="logo"> <img src="/icons/sunmoonyogastudio-logo-white.svg" class="header-logo"> </a>
       </div>
     </div> 
-    <nav class="col-9 hide-md right">
-      <a href="/"> Start </a>
-      <a href="/ueber-mich"> Über mich </a>
-      <div class="dropdown">
-        <a href="/tierkinesiologie.html" class="dropdown-title"> Tierkinesiologie </a>
-        <div class="dropdown-content">
-          <a href="/energetik.html"> Energetik </a>
-          <a href="/tierkommunikation.html"> Tierkommunikation </a>
-          <a href="/heilsteine.html"> Heilsteine </a>
-          <a href="/reiki.html"> Reiki </a>
-          <a href="/farbtherapie.html"> Farbtherapie </a>
-          <a href="/bachblueten.html"> Bachblüten </a>
-        </div>
-      </div>
-      <a href="/shop"> Shop </a>
-      <a href="/kontakt"> Kontakt </a>
-      <a href="/termin-buchen" class="featured"> Termin buchen </a>
+    <nav class="col-9-top hide-md right">
+      <a href="#yoga"> yoga </a>
+      <a href="#about"> about </a>
+      <a href="#kontakt"> contact </a>
     </nav> 
     <div class="col-7 right show-md">
       <div class="burger-button">
