--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,5 +1,5 @@
 
-<section class="bg-image bg-header tall-100">
+<section class="bg-image bg-header tall-70 capped-width">
   <header class="grid-middle">
     <div class="col-3">
       <div>
