--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,28 +1,28 @@
 
 <section class="bg-image bg-header tall-70 capped-width">
   <header class="grid-middle">
-    <div class="col-3">
+    <div class="col-3_xs-6">
       <div>
         <a href="/" class="logo"> <img src="/icons/sunmoonyogastudio-logo-white.svg" class="header-logo"> </a>
       </div>
     </div> 
-    <nav class="col-9-top hide-md right">
+    <nav class="col-9-top_xs-6 right">
       <a href="#yoga"> yoga </a>
       <a href="#about"> about </a>
       <a href="#kontakt"> contact </a>
     </nav> 
-    <div class="col-7 right show-md">
+    <!-- <div class="col-7 right show-md">
       <div class="burger-button">
         <span class="burger-top"></span>
         <span class="burger-middle"></span>
         <span class="burger-bottom"></span>
-    </div>
-    </div>
+      </div>
+    </div> -->
   </header>
 </section>
 
   
-<div class="mobile-menu"> 
+<!-- <div class="mobile-menu"> 
   <div class="mobile-logo">
     <img data-src="/images/logos/r-logo.png" class="lazy">
   </div>
@@ -42,7 +42,7 @@
     <a href="/shop"> Shop </a>
     <a href="/kontakt"> Kontakt </a>
   </nav>
-</div> 
+</div>  -->
 
 
 <!-- 
